--- a/css/style.css
+++ b/css/style.css
@@ -248,3 +248,18 @@ body {
  font-size: 13px;
  color: #F6F4F5;
 }
+
+
+.game{
+  margin-bottom: 100px;
+}
+
+.game__title{
+  margin-bottom: 50px;
+}
+
+
+.game__inner{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
