--- a/css/style.css
+++ b/css/style.css
@@ -263,3 +263,66 @@ body {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
 }
+
+.game__descr{
+  padding-right: 10px;
+}
+
+.game__descr-title{
+  text-transform: uppercase ;
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 36px;
+  margin-bottom: 10px;
+
+}
+
+.game__descr-text{
+  margin-bottom: 24px;
+}
+
+.game__link{
+  display: inline-block;
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 700; 
+  text-transform: uppercase;
+  padding: 16px 15px 12px;
+  width: 225px;
+  text-align: center;
+  border: 1px solid #BC10D8; 
+}
+
+.game__item{
+  border: 1px solid #BC10D8; 
+  padding: 10px 20px 18px; 
+  display: flex;
+  flex-direction: column;
+
+}
+.game__item-img{
+  margin-bottom: 10px;
+}
+
+.game__item-title{
+font-size: 24px;
+margin-bottom: 10px;
+}
+
+.game__item-text{
+  margin-bottom: 30px;
+}
+
+.game__item-link{
+  background: var(--gradient, linear-gradient(180deg, #BC10D8 0%, rgba(80, 0, 250, 0.93) 100%));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin-top: auto;
+}
+
+
+
+
+
