--- a/css/style.css
+++ b/css/style.css
@@ -524,3 +524,53 @@ body {
   -webkit-text-fill-color: transparent;
   text-align: center;
 }
+
+
+.contacts{
+  margin-bottom: 100px;
+}
+.contacts__title{
+  font-size: 24px;
+  line-height: 33px;
+  color: #070707;
+  margin-bottom: 10px;
+}
+.contacts__inner{
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+
+.contacts__form{
+  flex-basis: 600px;
+}
+
+.contacts__text{
+  font-size: 13px;
+}
+
+.contacts__email{
+
+}
+
+.form{
+  margin-bottom: 10px;
+  position: relative;
+
+}
+
+.form__input{
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #CACAD6;
+}
+
+.form__btn{
+  width: 50px;
+  height: 50px;
+  border-bottom: 1px solid #CACAD6;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #5C5C5E;
+  border-radius: 50%;
+}
